fixed off-center language switcher

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,8 @@ body {
     align-items: center;
     width:fit-content;
     cursor: pointer;
-
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .UKflag {
@@ -79,6 +80,7 @@ body {
     align-items: center;
     justify-content: center;
     margin-top:10px;
+    
 }
 
 .description {
